add figma link to dashboard

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <div class="bg-white shadow-md rounded-lg p-6">
                 <h2 class="text-2xl font-semibold mb-4">useful links</h2>
                 <ul class="list-disc list-inside space-y-2">
+                    <li><a target=”_blank” href="https://www.figma.com/proto/RzrlqXuf1hCJBPQkBAe6Jn/upsi---design-prototype?page-id=11%3A1833&type=design&node-id=54814-3398&viewport=-2493%2C1627%2C0.87&t=gwQtrHJNXVjxpSmu-1&scaling=scale-down&starting-point-node-id=54814%3A3398&mode=design" class="text-blue-500 hover:underline">figma design prototype</a></li>
                     <li><a target=”_blank” href="https://github.com/LaurinZubler/ba-documentation" class="text-blue-500 hover:underline">github documentation</a></li>
                     <li><a target=”_blank” href="https://laurinzubler.atlassian.net/jira/software/projects/UPSI/boards/2" class="text-blue-500 hover:underline">jira</a></li>
                     <li><a target=”_blank” href="https://laurinzubler.atlassian.net/plugins/servlet/ac/com.tda.timesheet.report/main?project.key=UPSI&project.id=10001" class="text-blue-500 hover:underline">timetracking</a></li>
